--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link rel="stylesheet" href="../public/styles/style.css">
+    <link rel="stylesheet" href="/public/styles/style.css">
     <title>Zeebrag</title>
 </head>
 
@@ -13,7 +13,7 @@
     <header>
         <nav class="d-flex">
             <div id="logo">
-                <img src="../public/images/Zeebrag logo.jpg" alt="logo">
+                <img src="/public/images/Zeebrag logo.jpg" alt="logo">
             </div>
             <ul class="d-flex">
                 <li><a href="index.html">Home</a></li>
