--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zeebrag</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link rel="stylesheet" href="../public/styles/style.css">
+    <link rel="stylesheet" href="/public/styles/style.css">
 </head>
 
 <body>
     <header>
         <nav class="d-flex">
             <div id="logo">
-                <img src="../public/images/Zeebrag logo.jpg" alt="logo">
+                <img src="/public/images/Zeebrag logo.jpg" alt="logo">
             </div>
 
             <ul class="d-flex">
