--- a/services.html
+++ b/services.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="d-flex">
             <div id="logo">
-                <img src="public/images/zeebrag_logo.jpg" alt="Zeebrag Logo">
+                <img src="Zeebrag_logo.jpg" alt="Zeebrag Logo">
             </div>
             <ul class="d-flex">
                 <li><a href="index.html">Home</a></li>
