--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div id="left" class="d-flex">
                 <h1>How We Can Help You</h1>
                 <!-- <h3>Our Thought Process</h3> -->
-                <p>Zeebrag empowers your brand at every digital touchpoint.
+                <div id="left-para" class="d-flex">Zeebrag empowers your brand at every digital touchpoint.
                     Whether you're a new business trying to build trust or an established brand looking to scale — we
                     help you:
                 <ul class="d-flex">
@@ -109,7 +109,7 @@
                     <p><b>Scalable & Transparent:</b> <i>Packages for startups to enterprises with clear KPIs.</i></p>
 
                 </div> -->
-                </p>
+                </div>
             </div>
             <div id="right">
                 <img src="https://static.wixstatic.com/media/27337a_f464df519e4c487d98aebda6edd54625~mv2.jpg/v1/fill/w_950,h_913,fp_0.50_0.50,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/27337a_f464df519e4c487d98aebda6edd54625~mv2.jpg"
