--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
                         <li><a href="services.html">Personal Branding</a></li>
                         <li><a href="services.html">Content Creation</a></li>
                         <li><a href="services.html">Web Development</a></li>
+                        <li><a href="services.html">Performance Marketing</a></li>
                     </ul>
                 </div>
 
