--- a/contact.html
+++ b/contact.html
@@ -139,6 +139,7 @@
                         <li><a href="services.html">Personal Branding</a></li>
                         <li><a href="services.html">Content Creation</a></li>
                         <li><a href="services.html">Web Development</a></li>
+                        <li><a href="services.html">Performance Marketing</a></li>
                     </ul>
                 </div>
 
